# LogicEngine

./: .gitignore  ANALIZA_KROKOW.md  ETAPY_MINIMALIZACJI_DNF.md  OCENA_CIAGU_DZIALANIA.md  OPIS_PROCESU_UPRASZCZANIA.md  SILNIK_UPRASZCZANIA_LOGICENGINE.md  requirements.txt
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css  serviceWorkerRegistration.ts
frontend/src/__mocks__/: api.js
frontend/src/components/: ASTDisplay.jsx  AnimatedStep.jsx  ColoredExpression.jsx  ConnectionVisualization.jsx  DefinitionsScreen.jsx  ExportOptionsModal.jsx  ExportResults.jsx  ExpressionHistory.jsx  Glossary.jsx  InteractiveGuide.jsx  KMapDisplay.jsx  KeyConceptsSummary.jsx  LawsPanel.jsx  LogicGatesDisplay.jsx  MinimalForms.jsx  MinimalForms.jsx.backup  PrintableResults.jsx  ProgressIndicator.jsx  QMSteps.jsx  ResultScreen.jsx  SimplifyDNF.jsx  (+5 more)
logicengine/: .gitignore  README.md  pyproject.toml  qm_review_report.txt  start_backend.py  test_server.py
logicengine/src/logicengine/: __init__.py  api.py  ast.py  axioms.py  contradiction.py  derivation_builder.py  derivation_builder_fix.py  engine.py  engine.py.backup  kmap.py  laws.py  main.py  minimal_forms.py  onp.py  parser.py  qm.py  rewriter.py  rules.py  steps.py  tautology.py  truth_table.py  utils.py  validation.py
logicengine/tests/: test_ast.py  test_axioms_integration.py  test_contradiction.py  test_engine.py  test_kmap.py  test_onp.py  test_parser.py  test_qm.py  test_simplify_steps.py  test_tautology.py
(+11 files in other folders)
